--- a/network/build.gradle
+++ b/network/build.gradle
@@ -1,27 +1,8 @@
 apply plugin: 'com.android.library'
 
-buildscript {
-    repositories {
-        jcenter()
-    }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.1'
-
-    }
-}
-
-allprojects {
-    repositories {
-        maven { url 'http://maven.aliyun.com/nexus/content/groups/public'}
-        google()
-    }
-}
-
-
 android {
+
     compileSdkVersion 26
-
-
 
     defaultConfig {
         minSdkVersion 17
@@ -39,12 +20,14 @@ android {
 
 }
 
+apply from: 'upload.gradle'
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     implementation 'com.android.support:appcompat-v7:26.1.0'
 
-    implementation 'com.squareup.retrofit2:retrofit:2.1.0'//retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.1.0'
     implementation 'com.google.code.gson:gson:2.6.2'//Gson 库
     implementation 'io.reactivex:rxjava:1.1.0'
     implementation 'io.reactivex:rxandroid:1.1.0'
@@ -53,9 +36,4 @@ dependencies {
 
     implementation 'com.squareup.okhttp3:logging-interceptor:3.3.0'
     implementation 'com.orhanobut:logger:2.1.0' // 打印日志
-
-}
-
-repositories {
-    google()
 }
