--- a/network/upload.gradle
+++ b/network/upload.gradle
@@ -6,7 +6,7 @@ version = "1.0.0" // 修改为你的版本号
 
 def siteUrl = 'https://github.com/hnn6326/network'   // 项目的主页
 def gitUrl = 'https://github.com/hnn6326/network.git'   // Git仓库的url
-group = "com.hnn.network"            // Maven Group ID for the artifact，
+group = "com"            // Maven Group ID for the artifact，
 install {
     repositories.mavenInstaller {
         // This generates POM.xml with proper parameters
@@ -63,12 +63,11 @@ bintray {
     key = properties.getProperty("bintray.apikey")
     configurations = ['archives']
     pkg {
-        userOrg = 'hnn6326'//bintray.com用户名
-        groupId = 'hnn'//jcenter上的路径
-        artifactId = 'kingkong'//项目名称
-
-//        repo = "network"          //这个应该是传到maven的仓库的
-//        name = "kingkong"    //发布的项目名字
+//        userOrg = 'com'//bintray.com用户名
+//        groupId = 'honery'//jcenter上的路径
+//        artifactId = 'kingkong'//项目名称
+        repo = "com/honery/network"          //这个应该是传到maven的仓库的
+        name = "kingkong"    //发布的项目名字
         websiteUrl = siteUrl
         vcsUrl = gitUrl
         licenses = ["Apache-2.0"]
